--- a/httpd-vhosts.conf
+++ b/httpd-vhosts.conf
@@ -8,21 +8,21 @@ NameVirtualHost *:80
 </Directory>
 
 <VirtualHost *:80>
-  ServerName benword.ben.internal
+  ServerName benword.dev
   CustomLog "/Users/ben/Sites/logs/benword-access_log" combined
   ErrorLog "/Users/ben/Sites/logs/benword-error_log"
   DocumentRoot "/Users/ben/Sites/benword"
 </VirtualHost>
 
 <VirtualHost *:80>
-  ServerName roots.ben.internal
+  ServerName roots.dev
   CustomLog "/Users/ben/Sites/logs/roots-access_log" combined
   ErrorLog "/Users/ben/Sites/logs/roots-error_log"
   DocumentRoot "/Users/ben/Sites/roots"
 </VirtualHost>
 
 <VirtualHost *:80>
-  ServerName rootstheme.ben.internal
+  ServerName rootstheme.dev
   CustomLog "/Users/ben/Sites/logs/rootstheme-access_log" combined
   ErrorLog "/Users/ben/Sites/logs/rootstheme-error_log"
   DocumentRoot "/Users/ben/Sites/rootstheme-com"
