--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -3,7 +3,7 @@
   email = ben@benword.com
 
 [alias]
-  l       = log --pretty=oneline -n 20 --graph
+  l       = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
   s       = status -s
   st      = status
 
